# flov

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.bat  build.ps1  dev.cmd  dev.sh  download-model.ps1  flov.toml  flov.toml.example
.cargo/: config.toml
crates/: README.md
crates/flov-whisper-cpu/: Cargo.toml
crates/flov-whisper-cpu/src/: main.rs
crates/flov-whisper-cuda/: Cargo.toml
crates/flov-whisper-cuda/src/: main.rs
crates/flov-whisper-metal/: Cargo.toml
crates/flov-whisper-metal/src/: main.rs
crates/flov-whisper-vulkan/: Cargo.toml
crates/flov-whisper-vulkan/src/: main.rs
docs/: DESIGN.md  MACOS.md  REPORT.md
scripts/: build-bundle.ps1  build-bundle.sh  build-sidecars.ps1  build-sidecars.sh
src/: api.rs  audio.rs  config.rs  hotkey.rs  input.rs  llm.rs  main.rs  overlay.rs  transcribe.rs  tray.rs
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  hotkey.rs  input.rs  lib.rs  main.rs  models.rs  models_cmd.rs  paths.rs  postprocess.rs  recording.rs  state_cmd.rs  stats.rs  transcribe.rs  tray.rs  ui.rs
ui/: electron-vite.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: app.html
ui/src/lib/: AudioWave.svelte  Pill.svelte  PolishedPill.svelte  SineWave.svelte  Waveform.svelte
ui/src/lib/settings/: Backend.svelte  HotkeyControl.svelte  MicPicker.svelte  Models.svelte  Postprocess.svelte  Stats.svelte
ui/src/main/: index.ts
ui/src/preload/: index.ts
ui/src/renderer/: index.html
ui/src/renderer/src/: App.tsx  index.css
ui/src/renderer/src/components/: Overlay.tsx  Sidebar.tsx
ui/src/renderer/src/pages/: History.tsx  Settings.tsx
ui/src/routes/: +page.svelte
ui/src/routes/settings/: +page.svelte
