[workspace]
members = ["src-tauri"]
resolver = "2"

# Legacy src/ + its [package]/[dependencies] removed when switching to Tauri.
# Old code is preserved on disk for reference; the workspace no longer builds
# it. To restore, restore [package] block from git history. #10 cleanup deletes
# src/ entirely.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
