[workspace]
members = ["src-tauri"]
exclude = ["crates/*"]
resolver = "2"

# crates/ is excluded so each transcription-backend sidecar (CPU, CUDA,
# Vulkan, Metal) is its own workspace and Cargo's feature unification can't
# merge GPU features into a CPU-only build.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
