[package]
name = "flov_app"
version = "0.2.3"
edition = "2021"
description = "Voice-to-text desktop app (Windows / macOS)"

[lib]
name = "flov_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri base features shared by every platform.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"


# Audio recording via WASAPI
cpal = "0.15"

# Transcription is delegated to a sidecar binary (crates/flov-whisper-*).
# whisper-rs and num_cpus moved into those crates so flov.exe links no
# whisper / GPU code and can ship without a CUDA toolchain.

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
# toml_edit preserves user comments / formatting when we rewrite a single
# field (e.g. backend.choice from the tray menu). The plain `toml` crate
# would round-trip-strip the file.
toml_edit = "0.22"

# Error handling
anyhow = "1"

# HTTP client for OpenRouter API
ureq = { version = "3", features = ["json"] }

# FFT for frequency spectrum
rustfft = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tray icon PNG decode. On Windows the bytes are recolored at runtime
# for dark-theme support; on macOS the same PNG is shipped as a
# template image (NSImage isTemplate=YES). Either way Tauri's
# Image::new wants raw RGBA — so we need a PNG decoder in all builds.
image = { version = "0.25", default-features = false, features = ["png"] }

# Clipboard (set text). Used by input.rs on macOS + Linux for the
# copy step of the paste-via-clipboard flow. Windows has its own
# Win32 clipboard impl in input.rs::windows_impl.
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
arboard = { version = "3.6", features = ["wayland-data-control"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Registry",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# `macos-private-api` is paired with `app.macOSPrivateApi: true` in
# tauri.macos.conf.json. Keep it target-scoped: Tauri validates enabled
# features against the active platform config, so enabling this globally
# breaks ordinary Windows `cargo check` before Rust code is compiled.
tauri = { version = "2", features = ["macos-private-api"] }
# CoreGraphics: CGEventTap (global hotkey hook) + CGEventPost (synthetic
# Cmd+V for paste) + CGDisplay (cursor's screen for pill positioning).
core-graphics = "0.24"
# CoreFoundation: CFRunLoop to host the event tap.
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
gtk = "0.18"

# profile.release lives in workspace root Cargo.toml (warning otherwise)
