[package]
name = "flov-whisper-cuda"
version = "0.1.0"
edition = "2021"
description = "CUDA Whisper transcription sidecar for flov (NVIDIA only)"

# Standalone workspace — keeps the cuda feature out of the CPU sidecar
# and out of flov.exe.
[workspace]

[[bin]]
name = "flov-whisper-cuda"
path = "src/main.rs"

[dependencies]
whisper-rs = { version = "0.16", features = ["cuda"] }
anyhow = "1"
num_cpus = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
